# implicit_weight_field

./: .gitignore  CONTRIBUTING.md  Dockerfile  EXPERIMENTS_README.md  LICENSE  README.md  __init__.py  check_config.py  debug_imports.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_all_experiments.py  run_key_experiments.py  test_imports.py  utils.py
analysis/: __init__.py  error_analysis.py
baselines/decomposition/: __init__.py  decompose.py
baselines/pruning/: __init__.py  prune.py
baselines/quantization/: __init__.py  quantize.py
compression/: __init__.py  compressor.py  trainer.py
configs/: config.py  default.yaml
core/: __init__.py  implicit_field.py  positional_encoding.py  siren.py
docs/: getting_started.md
evaluation/: __init__.py  benchmarks.py  metrics.py  statistical.py
examples/: compress_resnet.py  streaming_inference_demo.py
experiments/: __init__.py  tradeoff_analysis.py
experiments/ablation/: __init__.py  ablation_runner.py
experiments/models/: __init__.py  cv_models.py  nlp_models.py
experiments/robustness/: __init__.py  adversarial.py  downstream_tasks.py
experiments/scaling/: __init__.py  scaling_analysis.py
inference/: __init__.py  cache.py  modes.py
scripts/: __init__.py  hyperparameter_search.py  run_experiment.py  setup_environment.sh  train_compression.py
tests/: __init__.py  run_tests.py  test_compression.py  test_implicit_field.py  test_inference_modes.py  test_positional_encoding.py  test_siren.py
visualization/: __init__.py  interpretability.py  weight_visualization.py
